04-gateway/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: sistema-pedidos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: gateway-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: sistema-pedidos
spec:
  selector:
    app: gateway-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
